create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1826,7 +1826,7 @@ body {
 }
 .cid-raUABne4Zh {
   padding-top: 0px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-raUABne4Zh .mbr-section-subtitle {
@@ -1922,6 +1922,14 @@ body {
   .cid-raUABne4Zh .mbr-subscribe > * {
     margin: 0 0.5rem;
   }
+}
+.cid-rjSI9QAOjb {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rjSI9QAOjb P {
+  color: #767676;
 }
 .cid-r6yc1KUhGy {
   padding-top: 30px;
@@ -11193,8 +11201,8 @@ body {
   text-align: left;
 }
 .cid-rjRqFTDGUD {
-  padding-top: 60px;
-  padding-bottom: 45px;
+  padding-top: 75px;
+  padding-bottom: 60px;
   background-image: url("../../../assets/images/calamity-clouds-countryside-1446077-2000x1333.jpg");
 }
 .cid-raV41YUAVG {
