create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1930,65 +1930,6 @@ body {
 .cid-rjSI9QAOjb P {
   color: #767676;
 }
-.cid-r6yc1KUhGy {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-r6yc1KUhGy H2 {
-  color: #ffffff;
-}
-.cid-r6zsaNdbfj {
-  padding-top: 60px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r6zsaNdbfj .mbr-text,
-.cid-r6zsaNdbfj blockquote {
-  color: #767676;
-}
-.cid-r6zsaNdbfj .mbr-text B {
-  color: #000000;
-}
-.cid-r6zsaNdbfj .mbr-text {
-  color: #000000;
-}
-.cid-r6gDMObQHM {
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-r6gDMObQHM .title {
-  margin-bottom: 2rem;
-}
-.cid-r6gDMObQHM .mbr-section-subtitle {
-  color: #000000;
-}
-.cid-r6gDMObQHM a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-r6gDMObQHM a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-r6gDMObQHM .multi-horizontal {
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  max-width: 100%;
-}
-.cid-r6gDMObQHM .input-group-btn {
-  display: block;
-  text-align: center;
-}
-.cid-r6gDMObQHM LABEL {
-  color: #000000;
-}
-.cid-r6gDMObQHM H2 {
-  color: #000000;
-}
-.cid-r6gDMObQHM B {
-  color: #000000;
-}
 .cid-r6KAjJ3ZSX {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -10475,6 +10416,475 @@ body {
   text-align: center;
 }
 .cid-r6KAjJ3ZSX {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #1ea416;
+}
+.cid-rixa3dreKQ .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-rixa3dreKQ .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-rixa3dreKQ a {
+  font-style: normal;
+}
+.cid-rixa3dreKQ .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rixa3dreKQ .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rixa3dreKQ .nav-item:focus,
+.cid-rixa3dreKQ .nav-link:focus {
+  outline: none;
+}
+.cid-rixa3dreKQ .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rixa3dreKQ .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rixa3dreKQ .menu-logo {
+  margin-right: auto;
+}
+.cid-rixa3dreKQ .menu-logo .navbar-brand {
+  display: -webkit-flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rixa3dreKQ .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rixa3dreKQ .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rixa3dreKQ .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rixa3dreKQ .menu-logo .navbar-brand .navbar-logo img {
+  display: -webkit-flex;
+}
+.cid-rixa3dreKQ .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rixa3dreKQ .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rixa3dreKQ .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rixa3dreKQ .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rixa3dreKQ .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rixa3dreKQ .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rixa3dreKQ .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rixa3dreKQ .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rixa3dreKQ .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rixa3dreKQ .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rixa3dreKQ .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rixa3dreKQ .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rixa3dreKQ .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rixa3dreKQ .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rixa3dreKQ .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rixa3dreKQ .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rixa3dreKQ .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rixa3dreKQ button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rixa3dreKQ button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rixa3dreKQ button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-rixa3dreKQ button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rixa3dreKQ button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rixa3dreKQ button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rixa3dreKQ button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rixa3dreKQ nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rixa3dreKQ nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rixa3dreKQ nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rixa3dreKQ nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rixa3dreKQ .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rixa3dreKQ .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rixa3dreKQ .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rixa3dreKQ .collapsed .navbar-collapse.collapsing,
+.cid-rixa3dreKQ .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rixa3dreKQ .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rixa3dreKQ .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rixa3dreKQ .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rixa3dreKQ .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rixa3dreKQ .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rixa3dreKQ .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rixa3dreKQ .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rixa3dreKQ .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rixa3dreKQ .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rixa3dreKQ .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rixa3dreKQ .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rixa3dreKQ .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rixa3dreKQ .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rixa3dreKQ .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rixa3dreKQ .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rixa3dreKQ .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rixa3dreKQ .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rixa3dreKQ.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rixa3dreKQ img {
+    height: 3.8rem !important;
+  }
+  .cid-rixa3dreKQ .btn {
+    display: -webkit-flex;
+  }
+  .cid-rixa3dreKQ button.navbar-toggler {
+    display: block;
+  }
+  .cid-rixa3dreKQ .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rixa3dreKQ .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rixa3dreKQ .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rixa3dreKQ .navbar-collapse.collapsing,
+  .cid-rixa3dreKQ .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rixa3dreKQ .navbar-collapse.collapsing .navbar-nav,
+  .cid-rixa3dreKQ .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rixa3dreKQ .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rixa3dreKQ .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rixa3dreKQ .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rixa3dreKQ .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rixa3dreKQ .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rixa3dreKQ .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rixa3dreKQ .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rixa3dreKQ .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rixa3dreKQ .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rixa3dreKQ .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rixa3dreKQ .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rixa3dreKQ .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rixa3dreKQ .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rixa3dreKQ .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rixa3dreKQ .nav-link:hover,
+.cid-rixa3dreKQ .dropdown-item:hover {
+  color: #19ca0f !important;
+}
+.cid-r6QgitsG48 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QgitsG48 H2 {
+  color: #ffffff;
+}
+.cid-r6Qgi0WlvI {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Qgi0WlvI H2 {
+  color: #ffffff;
+}
+.cid-rkBsHlJTXF {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rkBsHlJTXF .mbr-text,
+.cid-rkBsHlJTXF blockquote {
+  color: #767676;
+}
+.cid-rkBsHlJTXF .mbr-text B {
+  color: #000000;
+}
+.cid-rkBsHlJTXF .mbr-text {
+  color: #000000;
+}
+.cid-rkBsHXkrgX {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rkBsHXkrgX .title {
+  margin-bottom: 2rem;
+}
+.cid-rkBsHXkrgX .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-rkBsHXkrgX a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-rkBsHXkrgX a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-rkBsHXkrgX .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-rkBsHXkrgX .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-rkBsHXkrgX LABEL {
+  color: #000000;
+}
+.cid-rkBsHXkrgX H2 {
+  color: #000000;
+}
+.cid-rkBsHXkrgX B {
+  color: #000000;
+}
+.cid-r6PqGpnRMM {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #1ea416;
